# frontend

./: README.md  vitrux.cabal
src-exec/: Main.hs
src-lib/Language/Vitrux/: AST.hs  Lex.hs  Parse.hs
src-lib/Language/Vitrux/AST/: ID.hs
src-test/Language/Vitrux/: LexSpec.hs  ParseSpec.hs
